--- a/src/business-insurance/coffee-flow/14-coffee-flow.html
+++ b/src/business-insurance/coffee-flow/14-coffee-flow.html
@@ -142,114 +142,91 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne
-                            </p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Hours of operation</h3>
 
-                        <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section">
+                        <div class="contain-wrapper-sm">
+                            <form class="mt-4">
+                                <div class="">
+                                    <div class="d-flex justify-content-between">
+                                    </div>
+                                    <div class="vehicle-details w-75 mx-auto claim-additional-info bg-white border border-1">
+                                        <div class="row g-3">
+                                            <div class="col-3">
+                                                <div class="f-group max-width-100">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="HH"
+                                                            id="1">
+                                                            <option value="">Select </option>
+                                                            <option value="1" selected>09
+                                                            </option>
+                                                            <option value="2">
+                                                                05
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
 
+                                            <div class="col-3">
+                                                <div class="f-group max-width-100">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="HH"
+                                                            id="1">
+                                                            <option value="">Select </option>
+                                                            <option value="1" selected>AM
+                                                            </option>
+                                                            <option value="2">
+                                                                PM
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-                                            <img src="../../images/business-icon/none-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/none-inactive.svg" alt=""
-                                                class="offline" />
-                                            None
-                                        </span>
-                                    </label>
+                                            <div class="col-3">
+                                                <div class="f-group max-width-100">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="HH"
+                                                            id="1">
+                                                            <option value="">Select </option>
+                                                            <option value="1">09
+                                                            </option>
+                                                            <option value="2" selected>
+                                                                05
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                                            
+                                            <div class="col-3">
+                                                <div class="f-group max-width-100">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="HH"
+                                                            id="1">
+                                                            <option value="">Select </option>
+                                                            <option value="1">AM
+                                                            </option>
+                                                            <option value="2" selected>
+                                                                PM
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
 
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
-                                                class="offline" />
-                                            Drive-Thru<br>
-                                            Window
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
-                                                class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
-                                        </span>
-                                    </label>
-
-                                    <div class="w-100"></div>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle3">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle3">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
-                                                class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
-                                        </span>
-                                    </label>
-
+                                        </div>
+                                    </div>
                                 </div>
-
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
-                            </div>
-                        </form>
-
+                            </form>
+                        </div>
                     </div>
+
                 </div>
             </div>
     </main>
