--- a/src/business-insurance/default-flow/10-2-default-flow.html
+++ b/src/business-insurance/default-flow/10-2-default-flow.html
@@ -145,105 +145,44 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Which limit would you like for Directors & Officers</h3>
 
                         <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section">
-
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-                                            <img src="../../images/business-icon/none-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/none-inactive.svg" alt=""
-                                                class="offline" />
-                                            None
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
-                                                class="offline" />
-                                            Drive-Thru<br>
-                                            Window
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
-                                                class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
-                                        </span>
-                                    </label>
-
-                                    <div class="w-100"></div>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle3">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle3">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
-                                                class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
-                                        </span>
-                                    </label>
-
+                            <div class="contain-wrapper-sm">
+                                <div class="flex-container-center">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <div class="d-flex align-self-center me-3">
+                                            <label class="radio-inline radio-btn" for="BeneficiaryYes">
+                                                <input class="radio-control" type="radio" name="Beneficiary2" value=""
+                                                    id="BeneficiaryYes" checked="">
+                                                <span class="radio-custom"></span>
+                                                <span class="radio-label fs-14 bg-white">1 million
+                                                </span>
+                                            </label>
+                                        </div>
+                                        <div class="d-flex align-self-center me-3">
+                                            <label class="radio-inline radio-btn" for="BeneficiaryNo">
+                                                <input class="radio-control" type="radio" name="Beneficiary2" value=""
+                                                    id="BeneficiaryNo">
+                                                <span class="radio-custom"></span>
+                                                <span class="radio-label fs-14 bg-white">3 million
+                                                </span>
+                                            </label>
+                                        </div>
+                                        <div class="d-flex align-self-center">
+                                            <label class="radio-inline radio-btn" for="BeneficiaryNo1">
+                                                <input class="radio-control" type="radio" name="Beneficiary2" value=""
+                                                    id="BeneficiaryNo1">
+                                                <span class="radio-custom"></span>
+                                                <span class="radio-label fs-14 bg-white">5 Million
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </div>
                                 </div>
+                            </div>
 
+                            <div class="contain-wrapper-sm position-relative z-index-2">
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </div>
