--- a/src/business-insurance/default-flow/11-default-flow.html
+++ b/src/business-insurance/default-flow/11-default-flow.html
@@ -145,105 +145,78 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Any of these in the last 3 years?</h3>
 
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section">
-
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="glass1">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
+                                            id="glass1">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
                                             <img src="../../images/business-icon/none-active.svg" alt=""
                                                 class="active" />
                                             <img src="../../images/business-icon/none-inactive.svg" alt=""
                                                 class="offline" />
-                                            None
+
+                                            <span>
+                                                None
+                                            </span>
                                         </span>
                                     </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="glass">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle">
+                                            id="glass">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
+                                            <img src="../../images/business-icon/claim-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/claim-inactive.svg" alt=""
                                                 class="offline" />
-                                            Drive-Thru<br>
-                                            Window
+
+                                            <span>
+                                                Claims
+                                            </span>
                                         </span>
                                     </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="collision">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
+                                            id="collision">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
+                                            <img src="../../images/business-icon/canceled-policy-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/canceled-policy-inactive.svg" alt=""
                                                 class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
+
+                                            <span>
+                                                Canceled Policy
+                                            </span>
                                         </span>
                                     </label>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
+                                    
+                                    <label class="checkbox-inline squar-boxes mb-0" for="no-other-vehicle1">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
+                                            id="no-other-vehicle1">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
+                                            <img src="../../images/business-icon/non-renewed-policy-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/non-renewed-policy-inactive.svg" alt=""
                                                 class="offline" />
-                                            Wait Staff
-                                        </span>
-                                    </label>
-
-                                    <div class="w-100"></div>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle3">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle3">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
-                                                class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
+                                            <span>
+                                                Non Renewed Policy
+                                            </span>
                                         </span>
                                     </label>
 
                                 </div>
+                            </div>
 
+                            <div class="contain-wrapper-sm position-relative z-index-2">
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </div>
