--- a/src/business-insurance/default-flow/7-default-flow.html
+++ b/src/business-insurance/default-flow/7-default-flow.html
@@ -142,113 +142,136 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne
-                            </p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Employee & Owner Details</h3>
 
-                        <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section">
+                        <div class="contain-wrapper-sm">
+                            <form class="mt-4">
+                                <div class="d-flex justify-content-between">
+                                    <div class="vehicle-details">
+                                        <div class="row g-3">
+
+                                            <div class="col-12">
+
+                                                <div class="card-box">
+                                                    <div class="box-header">
+                                                        <h2> Employee Details </h2>
+                                                    </div>
+
+                                                    <div class="box-body">
+
+                                                        <div class="row g-3">
+                                                            <div class="col-md-6 ">
+                                                                <div class="form-group">
+                                                                    <input type="text"
+                                                                        placeholder="No. of part time employees"
+                                                                        class="form-control" value="">
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="col-md-6 ">
+                                                                <div class="form-group">
+                                                                    <input type="text"
+                                                                        placeholder="No. of full time employees"
+                                                                        class="form-control" value="">
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="col-md-12 ">
+                                                                <label class="label">
+                                                                    Employee Payroll: Estimate Yearly Total
+                                                                    <small >(Do not include owners pay)</small>
+                                                                    <span class="tooltip-card">
+                                                                        <img src="../../images/info-gray.svg" alt="" />
+                                                                        <span class="tooltip-content">
+                                                                            Total amount you will pay anyone or business
+                                                                            for doing work who does not have their own
+                                                                            business insurance at time of workbeing
+                                                                            complete
+                                                                        </span>
+                                                                    </span>
+                                                                </label>
+                                                                <div class="input-group form-control px-0">
+                                                                    <span class="input-group-append ">
+                                                                        <span
+                                                                            class="input-group-text border-0 bg-white d-block pe-0">
+                                                                            $
+                                                                        </span>
+                                                                    </span>
+                                                                    <input type="text" class="" id="Enter-amount"
+                                                                        placeholder="Amount">
+                                                                </div>
+                                                            </div>
 
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-                                            <img src="../../images/business-icon/none-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/none-inactive.svg" alt=""
-                                                class="offline" />
-                                            None
-                                        </span>
-                                    </label>
+                                                        </div>
+                                                    </div>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                                                </div>
+                                            </div>
 
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
-                                                class="offline" />
-                                            Drive-Thru<br>
-                                            Window
-                                        </span>
-                                    </label>
+                                            <div class="col-12">
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                                                <div class="card-box">
+                                                    <div class="box-header">
+                                                        <h2> Owner Details </h2>
+                                                    </div>
 
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
-                                                class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
-                                        </span>
-                                    </label>
+                                                    <div class="box-body">
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                                                        <div class="row g-3">
+                                                            <div class="col-md-6 ">
+                                                                <div class="form-group">
+                                                                    <input type="text"
+                                                                        placeholder="No. of Active Owners"
+                                                                        class="form-control" value="">
+                                                                </div>
+                                                                <span class="fs-14 text-light-gray">Does hands on work</span>
+                                                            </div>
 
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
-                                        </span>
-                                    </label>
+                                                            <div class="col-md-6 ">
+                                                                <div class="form-group">
+                                                                    <input type="text"
+                                                                        placeholder="No. of Passive owners"
+                                                                        class="form-control" value="">
+                                                                </div>
+                                                                <span class="fs-14 text-light-gray">Supervises/oversees</span>
+                                                            </div>
 
-                                    <div class="w-100"></div>
+                                                            <div class="col-md-12 ">
+                                                                <label class="label">
+                                                                    Owner Payroll: Estimate Yearly Total
+                                                                    <small>(Do not include employee
+                                                                        pay)</small>
+                                                                </label>
+                                                                <div class="input-group form-control px-0">
+                                                                    <span class="input-group-append ">
+                                                                        <span
+                                                                            class="input-group-text border-0 bg-white d-block pe-0">
+                                                                            $
+                                                                        </span>
+                                                                    </span>
+                                                                    <input type="text" class="" id="Enter-amount"
+                                                                        placeholder="Amount">
+                                                                </div>
+                                                            </div>
 
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle3">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle3">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
-                                                class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
-                                        </span>
-                                    </label>
+                                                        </div>
+                                                    </div>
 
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                                                </div>
+                                            </div>
 
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
-                                        </span>
-                                    </label>
 
+                                        </div>
+                                    </div>
                                 </div>
-
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
-                            </div>
-                        </form>
-
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
