--- a/src/business-insurance/default-flow/9-default-flow.html
+++ b/src/business-insurance/default-flow/9-default-flow.html
@@ -145,105 +145,130 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Do you want to add any of these coverages ?</h3>
 
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section">
-
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="glass1">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
+                                            id="glass1">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
                                             <img src="../../images/business-icon/none-active.svg" alt=""
                                                 class="active" />
                                             <img src="../../images/business-icon/none-inactive.svg" alt=""
                                                 class="offline" />
-                                            None
+
+                                            <span>
+                                                None
+                                            </span>
                                         </span>
                                     </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="glass">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle">
+                                            id="glass">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
+                                            <img src="../../images/business-icon/cyber-liability-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/cyber-liability-inactive.svg" alt=""
                                                 class="offline" />
-                                            Drive-Thru<br>
-                                            Window
+
+                                            <span>
+                                                Cyber Liability
+
+                                                <span class="tooltip-card">
+                                                    <img src="../../images/info-gray.svg" alt="" />
+                                                    <span class="tooltip-content">
+                                                        Can cover your business' liability for a data breach involving
+                                                        sensitive customer information, such as Social Security numbers,
+                                                        credit card numbers, account numbers, driver's license numbers
+                                                        and health records
+                                                    </span>
+                                                </span>
+                                            </span>
                                         </span>
                                     </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="collision">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
+                                            id="collision">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
+                                            <img src="../../images/business-icon/errors-omissions-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/errors-omissions-inactive.svg" alt=""
                                                 class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
-                                        </span>
-                                    </label>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                                            <span>
+                                                Errors & Omissions
 
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
+                                                <span class="tooltip-card">
+                                                    <img src="../../images/info-gray.svg" alt="" />
+                                                    <span class="tooltip-content">
+                                                        When employees make mistakes in the professional services
+                                                        they've provided to customers or clients this may help pay
+                                                    </span>
+                                                </span>
+                                            </span>
                                         </span>
                                     </label>
 
                                     <div class="w-100"></div>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle3">
+                                    
+                                    <label class="checkbox-inline squar-boxes mb-0" for="no-other-vehicle1">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle3">
+                                            id="no-other-vehicle1">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
+                                            <img src="../../images/business-icon/directors-officers-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/directors-officers-inactive.svg" alt=""
                                                 class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
+                                            <span>
+                                                director & officer
+
+                                                <span class="tooltip-card">
+                                                    <img src="../../images/info-gray.svg" alt="" />
+                                                    <span class="tooltip-content">
+                                                        May help protect the personal assets of corporate directors and
+                                                        officers, and their spouses, in the event they are personally
+                                                        sued by employees, vendors, competitors, investors, customers,
+                                                        or other parties, for actual or alleged wrongful acts in
+                                                        managing a company
+                                                    </span>
+                                                </span>
+                                            </span>
                                         </span>
                                     </label>
 
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
+                                    <label class="checkbox-inline squar-boxes mb-0 me-0" for="no-other-vehicle2">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
+                                            id="no-other-vehicle2">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
+                                            <img src="../../images/business-icon/builders-risk-active.svg" alt=""
+                                                class="active" />
+                                            <img src="../../images/business-icon/builders-risk-inactive.svg" alt=""
+                                                class="offline" />
+                                            <span>
+                                                builder risk
+
+                                                <span class="tooltip-card">
+                                                    <img src="../../images/info-gray.svg" alt="" />
+                                                    <span class="tooltip-content">
+                                                        Jobsite & Materials can be covered by this
+                                                    </span>
+                                                </span>
+                                            </span>
                                         </span>
                                     </label>
-
                                 </div>
+                            </div>
 
+                            <div class="contain-wrapper-sm position-relative z-index-2">
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </div>
