--- a/src/business-insurance/bakery-flow/8-bakery-flow.html
+++ b/src/business-insurance/bakery-flow/8-bakery-flow.html
@@ -145,16 +145,15 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Select all that apply to your business</h3>
 
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section">
 
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="collision">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
+                                            id="collision">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
                                             <img src="../../images/business-icon/none-active.svg" alt=""
@@ -165,47 +164,50 @@
                                         </span>
                                     </label>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0 " for="no-other-vehicle">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
                                             id="no-other-vehicle">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
+                                            <img src="../../images/business-icon/concentrate-food-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/concentrate-food-inactive.svg" alt=""
                                                 class="offline" />
-                                            Drive-Thru<br>
-                                            Window
+
+                                                <span>
+                                            Use food concentrates
+                                            <span class="tooltip-card">
+                                                <img src="../../images/info-gray.svg" alt="" />
+                                                <span class="tooltip-content">
+                                                    Use food concentrates, extracts, flavoring and syrups or sugar refining
+                                                </span>
+                                            </span>
+
+                                        </span>
                                         </span>
                                     </label>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0 me-0" for="no-other-vehicle2">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
+                                            id="no-other-vehicle2">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
+                                            <img src="../../images/business-icon/animal-food-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/animal-food-inactive.svg" alt=""
                                                 class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
+                                                <span>
+                                            Sell Animal Foods
+                                            <span class="tooltip-card">
+                                                <img src="../../images/info-gray.svg" alt="" />
+                                                <span class="tooltip-content">
+                                                    Sell Pet or animal foods exceeding 25% of sales
+                                                </span>
+                                            </span>
+
                                         </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
                                         </span>
                                     </label>
 
@@ -217,31 +219,46 @@
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
+                                            <img src="../../images/business-icon/food-supplements-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/food-supplements-inactive.svg" alt=""
                                                 class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
+                                                <span>
+                                            Sell Food Supplements
+                                            <span class="tooltip-card">
+                                                <img src="../../images/info-gray.svg" alt="" />
+                                                <span class="tooltip-content">
+                                                    Sell Dietary, nutritional, vitamin or weight-management food supplements
+                                                </span>
+                                            </span>
+
+                                        </span>
                                         </span>
                                     </label>
 
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0 me-0" for="glass">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
+                                            id="glass">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
+                                            <img src="../../images/business-icon/marijuana-flower-active.svg" alt=""
+                                                class="active" />
+                                            <img src="../../images/business-icon/marijuana-flower-inactive.svg" alt=""
+                                                class="offline" />
 
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
+                                            <span>
+                                                Sell Marijuana
+
+                                                <span class="tooltip-card">
+                                                    <img src="../../images/info-gray.svg" alt="" />
+                                                    <span class="tooltip-content">
+                                                        Sell Marijuana, Hemp, or Cannabidiol (CBD) processing, handling, sales or distribution (including edible forms)
+                                                    </span>
+                                                </span>
+
+                                            </span>
                                         </span>
                                     </label>
-
                                 </div>
 
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
