--- a/src/business-insurance/coffee-flow/13-coffee-flow.html
+++ b/src/business-insurance/coffee-flow/13-coffee-flow.html
@@ -139,116 +139,23 @@
                         <a class="text-blue ms-3 mt-3 back-arrow" href="#"><i
                                 class="fa fa-arrow-left-long me-2"></i>BACK</a>
                     </div>
-                    <div class="container mt-5 pt-5">
+                    <div class="mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne
-                            </p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Any repacking of someone else product relabeled with your Business name?</h3>
 
-                        <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section">
-
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-                                            <img src="../../images/business-icon/none-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/none-inactive.svg" alt=""
-                                                class="offline" />
-                                            None
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
-                                                class="offline" />
-                                            Drive-Thru<br>
-                                            Window
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
-                                                class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
-                                        </span>
-                                    </label>
-
-                                    <div class="w-100"></div>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle3">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle3">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
-                                                class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
-                                        </span>
-                                    </label>
-
+                        <div class="contain-wrapper-sm">
+                            <form class="mt-4">
+                                <div class="contain-wrapper-sm d-flex justify-content-center">
+                                    <button class="btn btn-outline-primary mt-4 mt-sm-0 mx-3"><span>No</span>
+                                    </button>
+                                    <button type="submit" class="btn btn-primary  mx-3 mt-4 mt-sm-0"><span>Yes</span>
+                                    </button>
                                 </div>
-
-                                <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
-                                </button>
-                            </div>
-                        </form>
-
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
