--- a/src/business-insurance/coffee-flow/9-coffee-flow.html
+++ b/src/business-insurance/coffee-flow/9-coffee-flow.html
@@ -145,67 +145,36 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title text-center">Select all service styles offered by your business</h3>
+                        <h3 class="title text-center">Select all cooking methods used</h3>
 
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section">
 
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="glass">
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="collision">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="glass">
+                                            id="collision">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
-                                            <img src="../../images/business-icon/none-active.svg" alt=""
+                                            <img src="../../images/business-icon/microwaves-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/none-inactive.svg" alt=""
-                                                class="offline" />
-                                            None
+                                            <img src="../../images/business-icon/microwaves-inactive.svg" alt="" class="offline" />
+                                            Electric toasters, microwaves <br>
+                                            or warmers
                                         </span>
                                     </label>
 
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle">
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0 me-0" for="no-other-vehicle">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
                                             id="no-other-vehicle">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/drive-thru-active.svg" alt=""
+                                            <img src="../../images/business-icon/baking-acive.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/drive-thru-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/baking-inacive.svg" alt=""
                                                 class="offline" />
-                                            Drive-Thru<br>
-                                            Window
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0" for="no-other-vehicle4">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle4">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/mobile-vending-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/mobile-vending-inactive.svg" alt=""
-                                                class="offline" />
-                                            Mobile or Street<br>
-                                            Vending
-                                        </span>
-                                    </label>
-
-                                    <label class="checkbox-inline box-140 squar-boxes mb-0 me-0" for="no-other-vehicle5">
-                                        <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle5">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/wait-staff-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../../images/business-icon/wait-staff-inactive.svg" alt=""
-                                                class="offline" />
-                                            Wait Staff
+                                                Baking
                                         </span>
                                     </label>
 
@@ -217,33 +186,26 @@
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
 
-                                            <img src="../../images/business-icon/table-service-active.svg" alt=""
+                                            <img src="../../images/business-icon/grill-flames-active.svg" alt=""
                                                 class="active" />
-                                            <img src="../../images/business-icon/table-service-inactive.svg" alt=""
+                                            <img src="../../images/business-icon/grill-flames-inactive.svg" alt=""
                                                 class="offline" />
-                                            Table Service by counter-staff
-                                            <br>
-                                            (not wait staff)
+                                                Grills or open flames
                                         </span>
                                     </label>
-
-                                    <label class="checkbox-inline box-250 squar-boxes mb-0" for="no-other-vehicle6">
+                                    
+                                    <label class="checkbox-inline box-250 squar-boxes mb-0 me-0" for="glass">
                                         <input class="checkbox-control" type="checkbox" name="accident-type" value=""
-                                            id="no-other-vehicle6">
+                                            id="glass">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">
-
-                                            <img src="../../images/business-icon/salad-menu-restaurant-active.svg"
-                                                alt="" class="active" />
-                                            <img src="../../images/business-icon/salad-menu-restaurant-inactive.svg"
-                                                alt="" class="offline" />
-                                            Salad / Buffet bar <br>
-                                            Menu option
+                                            <img src="../../images/business-icon/deep-fryer-active.svg" alt="" class="active" />
+                                            <img src="../../images/business-icon/deep-fryer-inactive.svg" alt="" class="offline" />
+                                            Deep Fat Fryer
                                         </span>
                                     </label>
-
                                 </div>
-
+                                
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </div>
